<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome_text">Welcome</string>
    <string name="name_prompt">Enter you name.</string>
    <string name="entry_hint">Name</string>
    <string name="button_text">Start</string>
    <string name="qst_Image">question_image</string>
    <string name="btnSubmit_text">SUBMIT</string>
    <string name="result">Result</string>
    <string name="resultDescription">trophy_icon</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>